[project]
name = "strategy-robust-portfolio"
version = "0.1.0"
description = "Robust portfolio construction over a strategy universe — Ledoit-Wolf shrinkage, Ben-Tal/Nemirovski uncertainty sets, and a saturation curve for diversification."
authors = [{ name = "Daniel Vieira Gatto" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.0",
  "scipy>=1.11",
  "matplotlib>=3.8",
  "scikit-learn>=1.3",
  "cvxpy>=1.5",
  "pyarrow>=14.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
